# contracts/typescript/models/index.ts
@@ -21,6 +21,9 @@ export * from './DeviceRegistrationView';
 export * from './DraftInput';
 export * from './EffectiveDay';
 export * from './EmailRequest';
+export * from './InvitationChangeRequest';
+export * from './InvitationPage';
+export * from './InvitationProfile';
 export * from './MemberList';
 export * from './MemberProfile';
 export * from './MutationReceipt';
